tests/baselines/reference/computedPropertyNames24_ES5(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
computedPropertyNames24_ES5.ts(7,6): error TS2466: 'super' cannot be referenced in a computed property name.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== computedPropertyNames24_ES5.ts (1 errors) ====
    class Base {
        bar() {
            return 0;
        }
    }
    class C extends Base {
        [super.bar()]() { }
         ~~~~~
!!! error TS2466: 'super' cannot be referenced in a computed property name.
    }